--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <title>House of Commons Library Open Day</title>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
 <style>
-    span#logo {max-width: 300px;}
+    span#logo {max-width: 300px;color:green;}
 </style>
   </head>
   <body>
