--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
 
       </main>
       <footer>
-      <p>Tracking an analytics are not used on this site by the UK Parliament.</p>
+      <p>Tracking and analytics are not used on this site by the UK Parliament.</p>
     </footer>
   </body>
 </html>
