--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
   </head>
   <body>
       <header>
-        
+        <img src="{{ '/assets/images/hoclibrary.png' | relative_url }}" alt="House of Commons Library">
         <h1>
             <a href="{{ "/" | absolute_url }}">
                 {{ site.title | default: site.github.repository_name }}
