--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,11 +10,15 @@
   </head>
   <body>
       <header>
+      
+      <a href="/"><img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png"></a>
+<!-- 
         <h1>
-            <a href="{{ "/" | absolute_url }}">
-                {{ site.title }}
+            <a href="https://ukparliament.github.io/commons-library-open-day/">
+                Open Day
             </a>
         </h1>
+ -->
       </header>
       <main>
 
@@ -23,6 +27,8 @@
       </main>
       <footer>
       <p>Tracking and analytics are not used on this site by the UK Parliament.</p>
+            <p><a href="https://ukparliament.github.io/commons-library-open-day/">ukparliament.github.io/commons-library-open-day</a></p>
+
     </footer>
   </body>
 </html>
