--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,7 @@
   <body>
       <header>
       
-      <a href="/"><img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png"></a>
-<!-- 
-        <h1>
-            <a href="https://ukparliament.github.io/commons-library-open-day/">
-                Open Day
-            </a>
-        </h1>
- -->
+      <a href="https://ukparliament.github.io/commons-library-open-day/"><img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png"></a>
       </header>
       <main>
 
