--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,9 @@
   <body>
       <header>
       
-      <a href="https://ukparliament.github.io/commons-library-open-day/"><img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png"></a>
+      <a href="https://ukparliament.github.io/commons-library-open-day/">
+        <img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png" alt="House of Commons Library: Open Day">
+      </a>
       </header>
       <main>
 
