--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,20 +9,16 @@
   </head>
   <body>
       <header>
-      
       <a href="https://ukparliament.github.io/commons-library-open-day/">
         <img src="https://ukparliament.github.io/commons-library-open-day/assets/images/hoclibrary.png" alt="House of Commons Library: Open Day">
       </a>
       </header>
       <main>
-
       {{ content }}
-
       </main>
       <footer>
-      <p>Tracking and analytics are not used on this site by the UK Parliament.</p>
-            <p><a href="https://ukparliament.github.io/commons-library-open-day/">ukparliament.github.io/commons-library-open-day</a></p>
-
+      <p>The UK Parliament does not use tracking or analytics on this site</p>
+      <p><a href="https://ukparliament.github.io/commons-library-open-day/">ukparliament.github.io/commons-library-open-day</a></p>
     </footer>
   </body>
 </html>
